# django-all-in-one-accessibility

./: .readme  MANIFEST.in  PKG-INFO  README.rst  Readme.md  db.sqlite3  manage.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: accessibility.yml
accessibility/: admin.py  apps.py  context_processors.py  db.py  models.py  urls.py  views.py  widgets.py
accessibility/migrations/: 0001_initial.py  0002_all_in_one_accessibility_aioa_icon_type.py  0002_allinoneaccessibility_enable_widget_icon_position_and_more.py  0003_alter_all_in_one_accessibility_aioa_icon_type.py  0003_alter_allinoneaccessibility_aioa_color_code_and_more.py  0004_alter_all_in_one_accessibility_aioa_icon_type.py  0004_alter_allinoneaccessibility_aioa_place.py  0005_allinoneaccessibility_aioa_icon_type_and_more.py  0005_alter_all_in_one_accessibility_aioa_icon_type.py  0006_all_in_one_accessibility_aioa_icon_size_and_more.py  0006_allinoneaccessibility_aioa_license_key_and_more.py  0007_allinoneaccessibility_to_the_bottom_and_more.py  0007_remove_all_in_one_accessibility_aioa_icon_type.py  0008_all_in_one_accessibility_aioa_icon.py  0008_allinoneaccessibility_aioa_size_value_and_more.py  0009_allinoneaccessibility_aioa_icon_size_and_more.py  0009_alter_all_in_one_accessibility_aioa_icon.py  0010_alter_allinoneaccessibility_aioa_icon_size.py  0010_remove_all_in_one_accessibility_aioa_icon_and_more.py  0011_all_in_one_accessibility_gender.py  0011_alter_allinoneaccessibility_aioa_icon_size.py  0012_allinoneaccessibility_website_url.py  0012_alter_all_in_one_accessibility_gender.py  0013_remove_all_in_one_accessibility_gender_and_more.py  0013_remove_allinoneaccessibility_aioa_license_key_and_more.py  0014_allinoneaccessibility_website_url.py  0014_alter_all_in_one_accessibility_aioa_icon_type.py  0015_alter_allinoneaccessibility_to_the_right.py  0015_remove_all_in_one_accessibility_aioa_icon_type.py  0016_remove_all_in_one_accessibility_aioa_icon_size.py  0016_remove_allinoneaccessibility_website_url_and_more.py  0017_all_in_one_accessibility_icon_type.py  0018_all_in_one_accessibility_icon_size_and_more.py  0019_alter_all_in_one_accessibility_icon_size_and_more.py  0020_alter_all_in_one_accessibility_icon_size_and_more.py  0021_rename_icon_size_all_in_one_accessibility_aioa_icon_size_and_more.py  0022_alter_all_in_one_accessibility_aioa_icon_size_and_more.py  0023_alter_all_in_one_accessibility_aioa_icon_size_and_more.py  0024_alter_all_in_one_accessibility_aioa_icon_type.py  0025_alter_all_in_one_accessibility_aioa_icon_type.py  (+29 more)
accessibility/static/: form-icons.css  icon-radio.js
accessibility/templates/accessibility/: radiogrid_widget.html
accessibility/templates/admin/accessibility/: change_form.html
aioa_accessibility/: asgi.py  settings.py  urls.py  wsgi.py
django_all_in_one_accessibility.egg-info/: SOURCES.txt  requires.txt  top_level.txt
template/: about.html  contact.html  index.html
