[metadata]
name = django-all-in-one-accessibility
version = 1.0
description = A Django App based on assistive technology that helps organizations enhance the accessibility and usability of their website
long_description = file: README.rst
url = https://www.skynettechnologies.com
author = Skynet Technologies USA LLC
author_email = developer3@skynettechnologies.com
license = BSD-3-Clause  
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2  
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2  